feat: refactor poms